--- a/projet_1.html
+++ b/projet_1.html
@@ -16,7 +16,7 @@
     </h3>
     <h5>google 5
     </h5>
-    <p title="google"> je suis content</p>
+    <p title="google"> je suis content 🤞</p>
 </body>
 
 </html>
