--- a/projet_1.html
+++ b/projet_1.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Cécéc'est moi google 😊❤❤
+    <title>Cécé c'est moi google
     </title>
 </head>
 
@@ -20,3 +20,5 @@
 </body>
 
 </html>
+<p title="google" im here <p>
+    
